Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia cum quo officiis commodi incidunt sunt, delectus saepe. Vitae atque deleniti qui voluptas possimus reiciendis. Porro numquam exercitationem facilis deserunt dolor.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quis ipsum adipisci inventore quibusdam voluptates voluptate distinctio delectus quidem tempore molestiae, non, sapiente fugiat optio fuga laboriosam esse explicabo asperiores.</p>
 </body>
 </html>
